name:                rational-kernels
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ocramz/rational-kernels
license:             BSD3
license-file:        LICENSE
author:              Marco Zocca
maintainer:          ocramz
copyright:           Marco Zocca 2020
category:            NLP
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.6.5

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     Data.Text.Kernel.Rational
  build-depends:       base >= 4.7 && < 5
                     , algebraic-graphs
                     , bytestring
                     , containers
                     , microlens
                     , microlens-th
                     , text
                     , unordered-containers

-- executable rational-kernels
--   default-language:    Haskell2010
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   hs-source-dirs:      app
--   main-is:             Main.hs
--   build-depends:       base
--                      , rational-kernels

test-suite spec
  default-language:    Haskell2010
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , rational-kernels
                     , hspec
                     , QuickCheck

source-repository head
  type:     git
  location: https://github.com/ocramz/rational-kernels
